Updates to b, f, g, and i.
* Add broken scatterer compatibility. Configs are a work in progress and do not currently work and will probably break any additional scatterer attempt.
* Change Wolf Rayet's planets to use each planet's real name, rather than their deadnames.
* by deadnames I meant their systematic names. just a little trans humor for the changelog.
* Asite Par and Exular now have a more accurate semimajoraxis.
* Add signatures to Aire & Ein.
* Change a line in the description of Avu to make it more scientifically accurate.
* Adjust Ein's inclination, semimajoraxis, and surface gravity. All are slightly higher.
* Change Caps's planets to use their real names rather than their systematic names.
* Adjust Iridel's orbit icon. New texture, untinted.

--- a/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/AsitePar.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/AsitePar.cfg
@@ -2,7 +2,7 @@
 {
 	Body
 	{
-		name = Sauwel c t
+		name = AsitePar
 		identifier = WWPJ/ct
 		cacheFile = WeekWorldPlanetJam/Cache/ct.bin
 		Template
@@ -13,7 +13,7 @@
 		Properties
 		{
 			displayName = Asite Par^N
-			description = Asite Par is a strange planet, owing its home to a graviational keyhole created by its larger neighbor, Reticulum. The planet is known to host a large ocean on one hemisphere, and an arid desert on the other. Asite Par is named for an old phrase meaning "gifted dwelling," though sometimes its name is also attributed to a noise made by its discoverer while they fell off their chair during an observing session. \n -Wolf Rayet AKA "Exo's Lab"
+			description = Asite Par is a strange planet, owing its home to a graviational keyhole created by its larger neighbor, Reticulum. The planet is known to host a large ocean on one hemisphere, and an arid desert on the other. Asite Par is named for an old phrase meaning "gifted dwelling," though sometimes its name is also attributed to a noise made by its discoverer while they fell off their chair during an observing session. \n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
 			radius = 507000
 			rotationPeriod = 2050020
 			geeASL = 0.68 
@@ -66,7 +66,13 @@
 		Orbit
 		{
 			referenceBody = WWPJ/Sauwel
-			semiMajorAxis = 2.98E+9
+			
+			semiMajorAxis = 14959787070
+			//multiply by sqrt[Sauwel luminosity/Sun luminosity] to find the "system-au" or earth-insolation analogue.
+			@semiMajorAxis *= 0.291547595
+			//5:8 resonance with inner planet
+			@semiMajorAxis *= 0.683990379
+			
 			eccentricity = 0
 			longitudeOfAscendingNode = 0
 			argumentOfPeriapsis = 0
