--- a/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Cytosel.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Cytosel.cfg
@@ -2,7 +2,7 @@
 {
 	Body
 	{
-		name = Sauwel c III
+		name = Cytosel
 		identifier = WWPJ/cIII
 		cacheFile = WeekWorldPlanetJam/Cache/cIII.bin
 		Template
@@ -13,7 +13,7 @@
 		Properties
 		{
 			displayName = Cytosel^N
-			description = Cytosel is the final moon of the Reticulum System, and for its mass and location was once thought to be the primary influence of the system's structure, its significant gravity pulling and pushing the other moons and rings into place, and ensuring the nonexistence of any moons beyond itself. This has more recently been proven untrue, in fact Cytosel seems to be quite the opposite, though it no doubt plays a role in the structure of the system, it is uninvolved in the resonance of Golgi and Lyso, and no features in the ring system have been definitively connected to it. Cytosel seems to prefer sitting out over taking charge. \n -Wolf Rayet AKA "Exo's Lab"
+			description = Cytosel is the final moon of the Reticulum System, and for its mass and location was once thought to be the primary influence of the system's structure, its significant gravity pulling and pushing the other moons and rings into place, and ensuring the nonexistence of any moons beyond itself. This has more recently been proven untrue, in fact Cytosel seems to be quite the opposite, though it no doubt plays a role in the structure of the system, it is uninvolved in the resonance of Golgi and Lyso, and no features in the ring system have been definitively connected to it. Cytosel seems to prefer sitting out over taking charge. \n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
 			radius = 143000
 			geeASL = 0.182
 			isHomeWorld = False
