--- a/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Exular.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Exular.cfg
@@ -2,7 +2,7 @@
 {
 	Body
 	{
-		name = Sauwel c baby I
+		name = Exular
 		identifier = WWPJ/cbabyI
 		cacheFile = WeekWorldPlanetJam/Cache/cbabyI.bin
 		Template
@@ -13,7 +13,7 @@
 		Properties
 		{
 			displayName = Exular^N
-			description = Exular is a silly little moon. Between a large planet in the trailing lagrangian point, and a miniscule asteroid in this one, Yroptos is the one that gets a moon? Surely, this is some kind of joke. A lot of planetary astronomers certainly thought so, and even now Exular's existence is the subject of heavy debate. \n -Wolf Rayet AKA "Exo's Lab"
+			description = Exular is a silly little moon. Between a large planet in the trailing lagrangian point, and a miniscule asteroid in this one, Yroptos is the one that gets a moon? Surely, this is some kind of joke. A lot of planetary astronomers certainly thought so, and even now Exular's existence is the subject of heavy debate. \n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
 			radius = 2000
 			geeASL = 0.006
 			isHomeWorld = False
