--- a/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Golgi.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Golgi.cfg
@@ -2,7 +2,7 @@
 {
 	Body
 	{
-		name = Sauwel c I
+		name = Golgi
 		identifier = WWPJ/cI
 		cacheFile = WeekWorldPlanetJam/Cache/cI.bin
 		Template
@@ -13,7 +13,7 @@
 		Properties
 		{
 			displayName = Golgi^N
-			description = Golgi is the innermost spherical moon of Reticulum, and has a somewhat purplish-pink hue. Golgi is notably in a 2:1 resonance with Lyso, which keeps the two moons secure in their orbits. It's likely that Reticulum's moon system had a violent history before it arrived at this balance, if the rings are anything to go by. It has been stated many times that Golgi and Reticulum must do wonders in mutually enhancing each other's skies. \n -Wolf Rayet AKA "Exo's Lab"
+			description = Golgi is the innermost spherical moon of Reticulum, and has a somewhat purplish-pink hue. Golgi is notably in a 2:1 resonance with Lyso, which keeps the two moons secure in their orbits. It's likely that Reticulum's moon system had a violent history before it arrived at this balance, if the rings are anything to go by. It has been stated many times that Golgi and Reticulum must do wonders in mutually enhancing each other's skies. \n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
 			radius = 120000
 			geeASL = 0.148
 			isHomeWorld = False
