--- a/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Lyso.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Lyso.cfg
@@ -2,7 +2,7 @@
 {
 	Body
 	{
-		name = Sauwel c II
+		name = Lyso
 		identifier = WWPJ/cII
 		cacheFile = WeekWorldPlanetJam/Cache/cII.bin
 		Template
@@ -13,7 +13,7 @@
 		Properties
 		{
 			displayName = Lyso^N
-			description = Lyso is the smallest of Reticulum's spherical satellites, significantly larger than Ribo. Lyso is notably smoother overall than Golgi or Cytosel, yet is hosting a splattering of pockmark craters. This suggests that while Lyso once had active surface geology, it may have recently become geologically dead, or is the process of becoming so. \n -Wolf Rayet AKA "Exo's Lab"
+			description = Lyso is the smallest of Reticulum's spherical satellites, significantly larger than Ribo. Lyso is notably smoother overall than Golgi or Cytosel, yet is hosting a splattering of pockmark craters. This suggests that while Lyso once had active surface geology, it may have recently become geologically dead, or is the process of becoming so. \n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
 			radius = 59550
 			geeASL = 0.082
 			isHomeWorld = False
