--- a/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Reticulum.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Reticulum.cfg
@@ -4,7 +4,7 @@
 	//It can be split up into moons or coorbitals or left as a single planet.
 	Body
 	{
-		name = Sauwel c
+		name = Reticulum
 		identifier = WWPJ/c
 		cacheFile = WeekWorldPlanetJam/Cache/c.bin
 		Template
@@ -15,7 +15,7 @@
 		Properties
 		{
 			displayName = Reticulum^N
-			description = Reticulum is in a state of transition. Slowly casting aside its globally oceanic past in favor of enveloping itself in a thick atmosphere of greenhouse gases. Soon enough, the surface will reach temperatures and pressures capable of reducing a Kerbal to a bubbling pancake, even one wearing a sophisticated spacesuit. This is a gradual process however, and Reticulum will likely keep its oceans for another hundred million years or so. As they recede however, they're exposing some rather interesting terrain patterns. \n -Wolf Rayet AKA "Exo's Lab"
+			description = Reticulum is in a state of transition. Slowly casting aside its globally oceanic past in favor of enveloping itself in a thick atmosphere of greenhouse gases. Soon enough, the surface will reach temperatures and pressures capable of reducing a Kerbal to a bubbling pancake, even one wearing a sophisticated spacesuit. This is a gradual process however, and Reticulum will likely keep its oceans for another hundred million years or so. As they recede however, they're exposing some rather interesting terrain patterns. \n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
 			radius = 924000
 			rotationPeriod = 19800
 			geeASL = 1.66
@@ -138,6 +138,7 @@
 				saturation = 1
 				contrast = 1.5
 				tintColor = 1,1,1,0
+				specularColor = 0,0,0,0
 				powerNear = 1
 				powerFar = 1
 				groundTexStart = 0
@@ -175,6 +176,7 @@
 				contrast = 2
 				tintColor = 0.172549024,0.172549024,0.172549024,0.482352942
 				texTiling = 4000
+				specularColor = 0,0,0,0
 				texPower = 0.75
 				multiPower = 0.75
 				groundTexStart = 0
