--- a/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Ribo.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Ribo.cfg
@@ -2,7 +2,7 @@
 {
 	Body
 	{
-		name = Sauwel c IIII
+		name = Ribo
 		identifier = WWPJ/cIIII
 		cacheFile = WeekWorldPlanetJam/Cache/cIIII.bin
 		Template
@@ -13,13 +13,13 @@
 		Properties
 		{
 			displayName = Ribo^N
-			description = Ribo is the innermost moon of Reticulum, that is of course if one disregards the units that make up the ring system. \n -Wolf Rayet AKA "Exo's Lab"
+			description = Ribo is the innermost moon of Reticulum, that is of course if one disregards the units that make up the ring system, and also disregards all of the times it's actually further from Reticulum than Golgi. In all honesty, Golgi and Ribo stand on that podium together as equals. \n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
 			radius = 4000
 			sphereOfInfluence = 42000
 			geeASL = 0.005
 			isHomeWorld = False
 			timewarpAltitudeLimits = 0 25 50 100 150 200 250 300
-			initialRotation = -40
+			initialRotation = -65
 			tidallyLocked = True
 			albedo = 0.425
 			ScienceValues
@@ -53,12 +53,12 @@
 		{
 			referenceBody = WWPJ/c
 			color = 0.259,0.20,0.196,1
-			semiMajorAxis = 1594732
-			eccentricity = 0
-			longitudeOfAscendingNode = 21
-			argumentOfPeriapsis = 87
-			meanAnomalyAtEpoch = 0.81 
-			inclination = 0.03
+			semiMajorAxis = 3378539
+			eccentricity = 0.06
+			longitudeOfAscendingNode = 37.8
+			argumentOfPeriapsis = 151
+			meanAnomalyAtEpoch = -1.20 
+			inclination = 1.65
 			iconTexture = WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Textures/LargeRock.png
 		}
 		ScaledVersion
