--- a/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Yroptos.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Yroptos.cfg
@@ -2,7 +2,7 @@
 {
 	Body
 	{
-		name = Sauwel c baby
+		name = Yroptos
 		identifier = WWPJ/cbaby
 		cacheFile = WeekWorldPlanetJam/Cache/cbaby.bin
 		Template
@@ -13,7 +13,7 @@
 		Properties
 		{
 			displayName = Yroptos^N
-			description = Yroptos is a silly little minor planet. Reticulum proves through Asite Par that is capable of holding mighty planets within its gravitational keyholes, and yet somehow this asteroid, smaller than Lyso, has managed to become the largest member of the leading lagrangian point. \n -Wolf Rayet AKA "Exo's Lab"
+			description = Yroptos is a silly little minor planet. Reticulum proves through Asite Par that is capable of holding mighty planets within its gravitational keyholes, and yet somehow this asteroid, smaller than Lyso, has managed to become the largest member of the leading lagrangian point. \n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
 			radius = 15000
 			geeASL = 0.035
 			isHomeWorld = False
@@ -50,7 +50,13 @@
 		Orbit
 		{
 			referenceBody = WWPJ/Sauwel
-			semiMajorAxis = 2.98E+9
+			
+			semiMajorAxis = 14959787070
+			//multiply by sqrt[Sauwel luminosity/Sun luminosity] to find the "system-au" or earth-insolation analogue.
+			@semiMajorAxis *= 0.291547595
+			//5:8 resonance with inner planet
+			@semiMajorAxis *= 0.683990379
+			
 			eccentricity = 0.035
 			longitudeOfAscendingNode = 168
 			argumentOfPeriapsis = 60
