--- a/WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/Aire.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/Aire.cfg
@@ -31,7 +31,7 @@
 		Properties
 		{
 			displayName = Aire^N
-            		description = The outermost moon of Avu, a small, rocky, captured lump with the appearance of huge bites taken out of it created by huge craters dotting the body.
+            		description = The outermost moon of Avu, a small, rocky, captured lump with the appearance of huge bites taken out of it created by huge craters dotting the body. \nn Courtesy of Marshall AKA Myth
             		radius = 4300
             		geeASL = 0.003
 			rotates = true
