--- a/WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/Avu.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/Avu.cfg
@@ -17,7 +17,7 @@
 		}
 		Properties
 		{
-			description: An eccentric dwarf tethered by the overwhelmingly large gravity well of [Planet G], Avu's an interesting fella. Believed to have once been entirely covered in ice and harbouring a single larger moon, said moon's disintegration as it moved ever inwards has twisted and turned Avu's geology, creating a large swathe of darker material, chasms cutting through the terrain, a raised ridge encircling the equator, and a rather impressive ring system. \nn Courtesy of Marshall AKA Myth
+			description = An eccentric dwarf kept in resonance by the overwhelming influence of Diredul, Avu's an interesting fella. Believed to have once been entirely covered in ice and harbouring a single larger moon, said moon's disintegration as it moved ever inwards has twisted and turned Avu's geology, creating a large swathe of darker material, chasms cutting through the terrain, a raised ridge encircling the equator, and a rather impressive ring system. \nn Courtesy of Marshall AKA Myth
 			displayName = Avu^N
 			radius = 363200
 			// 1/100 earth mass in kilograms
