--- a/WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/Ein.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/Ein.cfg
@@ -18,9 +18,9 @@
 		Orbit
 		{
 			referenceBody = Avu
-			inclination = 2.5
+			inclination = 2.51
 			eccentricity = 0.034
-			semiMajorAxis = 1291500
+			semiMajorAxis = 1591500
 			longitudeOfAscendingNode = 135
 			argumentOfPeriapsis = 21
 			meanAnomalyAtEpochD = 50
@@ -30,9 +30,9 @@
 		Properties
 		{
 			displayName = Ein^N
-            		description = The innermost moon of Avu, hardly skirting the rings. It takes on a dual colouration much like its parent, with bright ring fluff covering and obscuring darker, denser material underneath.
+            		description = The innermost moon of Avu, hardly skirting the rings. It takes on a dual colouration much like its parent, with bright ring fluff covering and obscuring darker, denser material underneath. \nn Courtesy of Marshall AKA Myth
             		radius = 2250
-            		geeASL = 0.003
+            		geeASL = 0.00355
 			rotates = true
 			rotationPeriod = 4500
 			initialRotation = 45
