--- a/WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/0_Sauwel_g.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/0_Sauwel_g.cfg
@@ -5,7 +5,7 @@
 	Body
 	{
 		//you can change the name and displayName but please do not change the identifier.
-		name = Sauwel g
+		name = Diredul
 		identifier = WWPJ/g
 		cacheFile = WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/Cash/0_Sauwel_g.bin
 		Template
