--- a/WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/0_Sauwel_g_a.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/0_Sauwel_g_a.cfg
@@ -2,7 +2,7 @@
 {
 	Body
 	{
-		name = Sauwel g a
+		name = Mindo
 		identifier = WWPJ/g_a
 		cacheFile = WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/Cash/0_Sauwel_g_a.bin
 		Template
