--- a/WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/0_Sauwel_g_b.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/0_Sauwel_g_b.cfg
@@ -2,7 +2,7 @@
 {
 	Body
 	{
-		name = Sauwel g b
+		name = Awoy
 		identifier = WWPJ/g_b
 		cacheFile = WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/Cash/0_Sauwel_g_b.bin
 		Template
