--- a/WeekWorldPlanetJam/KopernicusFiles/8_Sauwel_i/0_Sauwel_i.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/8_Sauwel_i/0_Sauwel_i.cfg
@@ -39,6 +39,7 @@
 			referenceBody = Sun
 			
 			color = #C9609C
+			iconColor = 1,1,1,1
 		
 
 			//this class of orbits can be any stable orbit beyond the final planet (sauwel h), 
