Fix scatterer support
Turns out planets don't want to answer to their deadname.

Also ocean worlds need oceans. (Current oceans and atmospheres for Asite Par and Reticulum are placeholders)

--- a/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Scatterer/AtmoR.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Scatterer/AtmoR.cfg
@@ -2,7 +2,7 @@ Scatterer_atmosphere
 {
 	Atmo
 	{
-		name = Sauwel c
+		name = Reticulum
 		atmosphereStartRadiusScale = 1
 		HR = 6.84000015
 		HM = 1.20000005
