--- a/WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/Scatterer/Sauwel_g_a_Atmo.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/Scatterer/Sauwel_g_a_Atmo.cfg
@@ -3,7 +3,7 @@
 {
 	Atmo
 	{
-		name = Sauwel g a 
+		name = Mindo
 		cloudColorMultiplier = 1
 		cloudScatteringMultiplier = 0.25
 		cloudSkyIrradianceMultiplier = 0.15
