--- a/WeekWorldPlanetJam/ModCompatibility/Scatterer/0_PlanetsList.cfg
+++ b/WeekWorldPlanetJam/ModCompatibility/Scatterer/0_PlanetsList.cfg
@@ -42,29 +42,29 @@
 		//PLANETS C
 		Item
 		{
-			celestialBodyName = Sauwel c t
-			transformName = Sauwel c t
+			celestialBodyName = AsitePar
+			transformName = AsitePar
 			hasOcean = True
 			loadDistance = 300000000
 			unloadDistance = 500000000
 			flatScaledSpaceModel = False
 			usesCloudIntegration = True
 			cloudIntegrationUsesScattererSunColors = True
-			mainSunCelestialBody = WWPJ/Sauwel
+			mainSunCelestialBody = Sun
 			sunColor = 1.0,0.9098,0.8353,1.0
 			sunsUseIntensityCurves = True
 		}
 		Item
 		{
-			celestialBodyName = Sauwel c
-			transformName = Sauwel c
+			celestialBodyName = Reticulum
+			transformName = Reticulum
 			hasOcean = True
 			loadDistance = 50000000
 			unloadDistance = 100000000
 			flatScaledSpaceModel = False
 			usesCloudIntegration = True
 			cloudIntegrationUsesScattererSunColors = True
-			mainSunCelestialBody = WWPJ/Sauwel
+			mainSunCelestialBody = Sun
 			sunColor = 1.0,0.9098,0.8353,1.0
 			sunsUseIntensityCurves = True
 			eclipseCasters 
@@ -79,8 +79,8 @@
 		//PLANET G
 		Item
 		{
-			celestialBodyName = Sauwel g a 
-			transformName = Sauwel g a 
+			celestialBodyName = Mindo
+			transformName = Mindo
 			loadDistance = 1000000000
 			unloadDistance = 2000000000
 			sunColor = 1.0,0.9098,0.8353,1.0
@@ -117,5 +117,4 @@
 			sunColor = 1.0,0.9098,0.8353
 		}
 	}
-	
 }
