Scatterer, Shadows, and Science
* Implement custom scatterer atmospheres for Reticulum, Asite Par, and Caen.
* Add Wolf-Rayet's science definitions for the Reticulum system and its trojans.
* Slightly angle Reticulum's rings to 1 degree to make the scatterer shadow prettier.
* Make Mindo use a nonspherical model when Scatterer is installed.
* Increase Mindo's atmosphere molar mass.
* Add support for shadows cast by planets and moons in both Scatterer and Environmental Visual Enhancements. There are currently no plans to add clouds to EVE support.

--- a/WeekWorldPlanetJam/KopernicusFiles/4_Sauwel_e/Scatterer/AtmoCaen.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/4_Sauwel_e/Scatterer/AtmoCaen.cfg
@@ -2,17 +2,17 @@ Scatterer_atmosphere
 {
 	Atmo
 	{
-		name = Reticulum
+		name = Caen
 		atmosphereStartRadiusScale = 1
-		HR = 5.3
-		HM = 0.744000
-		m_betaR = 0.032743,0.076209,0.186855
-		BETA_MSca = 0.032109,0.032109,0.032109
-		m_mieG = 0.7
+		HR = 4.788
+		HM = 1.84
+		m_betaR = 0.003480,0.006671,0.019860
+		BETA_MSca = 0.028571,0.021429,0.028571
+		m_mieG = 0.9
 		averageGroundReflectance = 0.100000001
 		multipleScattering = True
 		godrayStrength = 0.800000012
-		flattenScaledSpaceMesh = 0.3
+		flattenScaledSpaceMesh = 0
 		rimBlend = 20
 		rimpower = 600
 		specR = 85
