--- a/WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/0_Sauwel_g_a.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/0_Sauwel_g_a.cfg
@@ -88,7 +88,14 @@
 			pressureCurveIsNormalized = True
 			temperatureCurveIsNormalized = False
 			staticPressureASL = 32.772
-			atmosphereMolarMass = 0.00046
+			atmosphereMolarMass = 0.00247 //0.00046 this value is much much less than that of a hydrogen helium atmosphere. I increased it so the game would, uh, work. -Luna
+			//molar mass matches this composition:
+			//Hydrogen 84.3%
+			//Helium 14.68%
+			//Water 0.8%
+			//Methane 0.12%
+			//Ammonia 0.1%
+			//-Luna
 			pressureCurve
 			{
 				key = 0 1
