--- a/WeekWorldPlanetJam/ModCompatibility/Scatterer/0_PlanetsList.cfg
+++ b/WeekWorldPlanetJam/ModCompatibility/Scatterer/0_PlanetsList.cfg
@@ -51,28 +51,56 @@
 			usesCloudIntegration = True
 			cloudIntegrationUsesScattererSunColors = True
 			mainSunCelestialBody = Sun
-			sunColor = 1.0,0.9098,0.8353,1.0
+			sunColor = 1,0.83,0.71
 			sunsUseIntensityCurves = True
+			eclipseCasters
+			{
+				Item = Askilos
+				Item = Elaan
+			}
 		}
 		Item
 		{
 			celestialBodyName = Reticulum
 			transformName = Reticulum
 			hasOcean = True
-			loadDistance = 50000000
-			unloadDistance = 100000000
+			loadDistance = 300000000
+			unloadDistance = 500000000
 			flatScaledSpaceModel = False
 			usesCloudIntegration = True
 			cloudIntegrationUsesScattererSunColors = True
 			mainSunCelestialBody = Sun
-			sunColor = 1.0,0.9098,0.8353,1.0
+			sunColor = 1,0.83,0.71
 			sunsUseIntensityCurves = True
 			eclipseCasters 
 			{ 
-				Item = Sauwel c I
-				Item = Sauwel c II
-				Item = Sauwel c III
-				Item = Sauwel c IIII
+				Item = Ribo
+				Item = Lyso
+				Item = Golgi
+				Item = Cytosel
+				Item = Askilos
+				Item = Elaan
+			}
+		}
+		
+		//PLANET E
+		Item
+		{
+			celestialBodyName = Caen
+			transformName = Caen
+			hasOcean = True
+			loadDistance = 300000000
+			unloadDistance = 500000000
+			flatScaledSpaceModel = False
+			usesCloudIntegration = True
+			cloudIntegrationUsesScattererSunColors = True
+			mainSunCelestialBody = Sun
+			sunColor = 1,0.83,0.71
+			sunsUseIntensityCurves = True
+			eclipseCasters 
+			{
+				Item = Ovoidun
+				Item = Menea
 			}
 		}
 		
@@ -89,6 +117,11 @@
 			flatScaledSpaceModel = False
 			usesCloudIntegration = False
 			mainSunCelestialBody = Sun
+			eclipseCasters 
+			{
+				Item = Awoy
+				Item = Diredul
+			}
 		}
 		
 		//PLANET H
