--- a/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Scatterer/AtmoAP.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Scatterer/AtmoAP.cfg
@@ -4,11 +4,11 @@ Scatterer_atmosphere
 	{
 		name = AsitePar
 		atmosphereStartRadiusScale = 1
-		HR = 6.84000015
-		HM = 1.20000005
-		m_betaR = 0.00579999993,0.0135000004,0.0331000015
-		BETA_MSca = 0.00400000019,0.00400000019,0.00400000019
-		m_mieG = 0.779999971
+		HR = 6.5
+		HM = 2.20000005
+		m_betaR = 0.003410,0.007938,0.019463
+		BETA_MSca = 0.066508,0.044345,0.034080
+		m_mieG = 0.8
 		averageGroundReflectance = 0.100000001
 		multipleScattering = True
 		godrayStrength = 0.800000012
