add biomes into config

--- a/WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/0_Sauwel_g_a.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/0_Sauwel_g_a.cfg
@@ -20,7 +20,7 @@
 			mass = 5.97219e22
 			@mass *= 15.73
 			ScienceValues
-            {
+           		{
 				landedDataValue = 20
 				splashedDataValue = 0
 				flyingLowDataValue = 12
@@ -31,7 +31,46 @@
 				flyingAltitudeThreshold = 7500
 				spaceAltitudeThreshold = 250000
 
-            }
+            		}
+			biomeMap = WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/Plugindata/MindoBiomes.dds
+			Biomes
+			{
+				Value
+				{
+					name = Volcano
+					displayName = Volcanoes
+					value = 0
+					color = RGB(203,203,203) 
+				}
+				Value
+				{
+					name = Lowlands  
+					displayName = Lowlands  
+					value = 0  
+					color = RGB(51,51,51)  
+				}
+				Value
+				{
+					name = Midlands  
+					displayName = Midlands  
+					value = 0  
+					color = RGB(83,83,83)  
+				}
+				Value
+				{
+					name = Highlands  
+					displayName = Highlands  
+					value = 0  
+					color = RGB(255,255,255)  
+				}
+				Value
+				{
+					name = Canyons 
+					displayName = Canyons
+					value = 0  
+					color = RGB(0,0,0)  
+				}
+			}
 		}
 		Orbit
 		{
