Asite Par Homeworld Patch

--- a/WeekWorldPlanetJam/KopernicusFiles/00_System/00_StockKiller.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/00_System/00_StockKiller.cfg
@@ -3,15 +3,16 @@
 	!Body[Moho]{}
 	!Body[Eve]{}
 	!Body[Gilly]{}
-	@Body[Kerbin]
-	{
-		@Orbit
-		{
-			@referenceBody = WWPJ/Sauwel
-			color = RGBA(1,1,1,1)
-			%semiMajorAxis = 4.36148994e9 //SAU
-		}
-	}
+	//Placeholder Kerbin is now replaced with Asite Par
+	//@Body[Kerbin]
+	//{
+	//	@Orbit
+	//	{
+	//		@referenceBody = WWPJ/Sauwel
+	//		color = RGBA(1,1,1,1)
+	//		%semiMajorAxis = 4.36148994e9 //SAU
+	//	}
+	//}
 	!Body[Mun]{}
 	!Body[Minmus]{}
 	!Body[Duna]{}
