--- a/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Scatterer/AtmoAP.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/Scatterer/AtmoAP.cfg
@@ -1,13 +1,14 @@
 Scatterer_atmosphere
 {
+	name = AsitePar
 	Atmo
 	{
 		name = AsitePar
 		atmosphereStartRadiusScale = 1
 		HR = 6.5
-		HM = 2.20000005
+		HM = 2.7
 		m_betaR = 0.003410,0.007938,0.019463
-		BETA_MSca = 0.066508,0.044345,0.034080
+		BETA_MSca = 0.112398,0.074942,0.057595
 		m_mieG = 0.8
 		averageGroundReflectance = 0.100000001
 		multipleScattering = True
