--- a/WeekWorldPlanetJam/KopernicusFiles/4_Sauwel_e/2_Sauwel_e_2_Menea.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/4_Sauwel_e/2_Sauwel_e_2_Menea.cfg
@@ -109,7 +109,7 @@
 
 			Material
 			{
-			texture = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Sauwel e2_Color3.png
+			texture = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\EMoon2_5_C.png
 			normals = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Menea_Normal.png
 			color = 1,1,1,1
 			specColor = 0,0,0,0
@@ -127,12 +127,12 @@
 				{
 					order = 5
 					enabled = true
-					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Sauwel e2_Color3.png
+					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Menea_PQS_Color.png
 				}
 
 				VertexHeightMap
 				{
-					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\emoon2.png
+					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Emoon2_4.png
 					offset = 0
 					deformity = 4000.0
 					scaleDeformityByRadius = false
@@ -236,6 +236,90 @@
 						key = -0.2988068 0.002564805 -0.01814346 -0.01814346
 						key = 0.9970253 0.003401639 0 0
 					}
+				}
+				
+				FlattenOcean
+				{
+  					name = FlattenMaria
+  					order = 300
+  					oceanRadius = 1900 //this value should be chosen to represent the depth of the maria. Higher values will mean more flat terrain, lower values will mean deeper impact basins.
+				}
+
+				//VertexSimplexHeight
+			    //{
+			    //        deformity = 2000
+			    //        frequency = 0.4
+			    //        octaves = 5
+			    //        persistence = 0.7
+			    //        seed = 78309
+			    //        enabled = true
+			    //        order = 302
+			    //}
+				
+				VertexHeightNoise //taken from Dermun in WW -Luna
+				{
+					name = MareRidges
+					noiseType = RiggedMultifractal
+					deformity = 150
+					seed = 7894521
+					frequency = 9
+					lacunarity = 2.5
+					persistence = 0.5
+					octaves = 8
+					mode = Low
+					enabled = True
+					order = 9999999
+				}
+
+				VoronoiCraters
+				{
+					colorOpacity = 0.0
+					DebugColorMapping = False
+					deformation = 100
+					jitter = 0.1
+					jitterHeight = 3
+					rFactor = 1
+					rOffset = 1
+					simplexFrequency = 40
+					simplexOctaves = 3
+					simplexPersistence = 0.5
+					simplexSeed = 123123
+					voronoiDisplacement = 0
+					voronoiFrequency = 80
+					voronoiSeed = 824
+					order = 305
+					enabled = True
+					name = VC2
+					index = 0
+					CraterCurve
+					{
+						key = -0.9982381 -0.7411783 -0.06500059 -0.06500059
+						key = -0.9332262 -0.7678316 -0.2176399 -0.2176399
+						key = -0.8990405 -0.7433339 -2.560626 -2.560626
+						key = -0.7445966 -0.8581167 0.4436148 0.4436148
+						key = -0.4499771 -0.1392395 5.289535 5.289535
+						key = -0.4015177 0.2551735 9.069458 -2.149609
+						key = -0.2297457 0.002857953 -0.4453675 -0.4453675
+						key = 0.2724952 0.00423781 -0.01884932 -0.01884932
+						key = 0.9998434 -0.004090764 0.01397126 0.01397126
+					}
+					JitterCurve
+					{
+						key = -1.000701 0.4278412 0.1577609 0.1577609
+						key = -0.7884969 0.09487452 -0.7739663 -0.7739663
+						key = -0.6091803 0.072019 0.123537 0.123537
+						key = -0.3930514 0.3903495 3.300831 3.300831
+						key = -0.3584836 0.8643304 0.07139917 0.07139917
+						key = -0.2988068 0.002564805 -0.01814346 -0.01814346
+						key = 0.9970253 0.003401639 0 0
+					}
+				}
+
+				FlattenOcean
+				{
+ 				 	name = FlattenRadius
+  				 	order = 9999999 //apply as a final pass
+ 				 	oceanRadius = 0 //it's good practice to flatten the ground at the radius/sea-level, just to make sure there's no terrain below sea level.
 				}
 
 
