Homeworldswap-compatible science
* Asite Par's science definitions should appear when Asite Par is the homeworld.
* Added some new Wolf-Rayet surface samples and a crew report.
* Moved all extant science defs to Career/ScienceDefinitions

--- a/WeekWorldPlanetJam/Career/ScienceDefinitions/e_Techo_ScienceDefs/crewReport.cfg
+++ b/WeekWorldPlanetJam/Career/ScienceDefinitions/e_Techo_ScienceDefs/crewReport.cfg
@@ -1,5 +1,7 @@
 @EXPERIMENT_DEFINITION:HAS[#id[crewReport]]:FOR[WWPJ]
 {
+  @RESULTS
+  {
   OvoidunInSpaceHigh = It looks like a cratered egg!
   OvoidunInSpaceLow = You look down at the battered landscape for a smooth spot to touch down.
   OvoidunSrfLanded = The anticipation is killing you!
@@ -13,5 +15,6 @@
   MeneaInSpaceHigh = Its so bright looking!
   MeneaInSpaceLow = You look down at the battered landscape for a smooth spot to touch down.
   MeneaSrfLanded = The anticipation is killing you!
+  }
 
 }
