--- a/WeekWorldPlanetJam/Career/ScienceDefinitions/e_Techo_ScienceDefs/gravityScan.cfg
+++ b/WeekWorldPlanetJam/Career/ScienceDefinitions/e_Techo_ScienceDefs/gravityScan.cfg
@@ -1,5 +1,7 @@
 @EXPERIMENT_DEFINITION:HAS[#id[gravityScan]]:FOR[WWPJ]
 {
+  @RESULTS
+  {
   OvoidunInSpaceHigh = The moons gravity is mapped.
   OvoidunInSpaceLow = The moons gravity is mapped.
   OvoidunSrfLanded = The moons gravity is mapped.
@@ -13,5 +15,5 @@
   MeneaInSpaceHigh = The moons gravity is mapped.
   MeneaInSpaceLow = The moons gravity is mapped.
   MeneaSrfLanded = The moons gravity is mapped.
-
+	}
 }
