--- a/WeekWorldPlanetJam/Career/ScienceDefinitions/e_Techo_ScienceDefs/magnetometer.cfg
+++ b/WeekWorldPlanetJam/Career/ScienceDefinitions/e_Techo_ScienceDefs/magnetometer.cfg
@@ -1,5 +1,7 @@
 @EXPERIMENT_DEFINITION:HAS[#id[magnetometer]]:FOR[WWPJ]
 {
+  @RESULTS
+  {
   OvoidunInSpaceHigh =You observe the magnetometer data. 
   OvoidunInSpaceLow = You observe the magnetometer data. 
   
@@ -8,5 +10,5 @@
 
   MeneaInSpaceHigh = You observe the magnetometer data. 
   MeneaInSpaceLow = You observe the magnetometer data. 
-
+	}
 }
