--- a/WeekWorldPlanetJam/Career/ScienceDefinitions/e_Techo_ScienceDefs/mobileMaterialsLab.cfg
+++ b/WeekWorldPlanetJam/Career/ScienceDefinitions/e_Techo_ScienceDefs/mobileMaterialsLab.cfg
@@ -1,5 +1,7 @@
 @EXPERIMENT_DEFINITION:HAS[#id[mobileMaterialsLab]]:FOR[WWPJ]
 {
+  @RESULTS
+  {
   OvoidunInSpaceHigh = The lab glows ominously.
   OvoidunInSpaceLow = You record some micro-meteoroid impacts on the lab.
   OvoidunSrfLanded = You record data from the lab.
@@ -13,5 +15,6 @@
   MeneaInSpaceHigh = The lab glows ominously.
   MeneaInSpaceLow = The materials lab loves being this close the the ground!
   MeneaSrfLanded = You record data from the lab.
+  }
 
 }
