--- a/WeekWorldPlanetJam/Career/ScienceDefinitions/e_Techo_ScienceDefs/mysteryGoo.cfg
+++ b/WeekWorldPlanetJam/Career/ScienceDefinitions/e_Techo_ScienceDefs/mysteryGoo.cfg
@@ -1,5 +1,7 @@
 @EXPERIMENT_DEFINITION:HAS[#id[mysteryGoo]]:FOR[WWPJ]
 {
+  @RESULTS
+  {
   OvoidunInSpaceHigh = The goo boils and jiggles when exposed to the vaccum. You monster.
   OvoidunInSpaceLow = The goo forms into a neat egg shape.
   OvoidunSrfLanded = The goo oozes out of its container and escapes onto the surface!
@@ -13,5 +15,6 @@
   MeneaInSpaceHigh = The goo turns inside-out.
   MeneaInSpaceLow = The goo seperates into 4 smaller Mystery Goos.
   MeneaSrfLanded = The goo hides in its container.
+  }
 
 }
