--- a/WeekWorldPlanetJam/Career/ScienceDefinitions/e_Techo_ScienceDefs/seismicScan.cfg
+++ b/WeekWorldPlanetJam/Career/ScienceDefinitions/e_Techo_ScienceDefs/seismicScan.cfg
@@ -1,9 +1,11 @@
 @EXPERIMENT_DEFINITION:HAS[#id[seismicScan]]:FOR[WWPJ]
 {
+  @RESULTS
+  {
   OvoidunSrfLanded = It seems the insides of this moon are still active!
   
   CaenSrfLanded = This planets insides are still quite active!
 
   MeneaSrfLanded = The inside of this moon, aside from random quakes triggered by impacts, is quite dead.
-
+	}
 }
