fix Menea's scaledspace colormap

--- a/WeekWorldPlanetJam/KopernicusFiles/4_Sauwel_e/2_Sauwel_e_2_Menea.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/4_Sauwel_e/2_Sauwel_e_2_Menea.cfg
@@ -109,7 +109,7 @@
 
 			Material
 			{
-			texture = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\EMoon2_5_C.png
+			texture = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Menea_ScaledSpaceColor.png
 			normals = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Menea_Normal.png
 			color = 1,1,1,1
 			specColor = 0,0,0,0
