AsitePar homeworld uses kerbin ocean in scatterer
this might fix the floating ocean bug. at the very least, i can't replicate the bug myself with this patch.

--- a/WeekWorldPlanetJam/HomeworldSwap/AsitePar_Homeworld.cfg
+++ b/WeekWorldPlanetJam/HomeworldSwap/AsitePar_Homeworld.cfg
@@ -122,22 +122,22 @@ key =	88000	0.00000E+00	0.00000E+00	0.00000E+00
 	#@WWPJ_Settings {}
 }
 
-@Scatterer_ocean:HAS[@WWPJ_Settings:HAS[#Homeworld[AsitePar]]]:FOR[zWeekWorldPlanetJam]
-{
-	!Ocean:HAS[#name[Kerbin]]{}
-}
+//@Scatterer_ocean:HAS[@WWPJ_Settings:HAS[#Homeworld[AsitePar]]]:FOR[zWeekWorldPlanetJam]
+//{
+//	!Ocean:HAS[#name[Kerbin]]{}
+//}
 @Scatterer_atmosphere:HAS[@WWPJ_Settings:HAS[#Homeworld[AsitePar]]]:FOR[zWeekWorldPlanetJam]
 {
 	!Atmo:HAS[#name[Kerbin]]{}
 }
 
 
-@Scatterer_ocean[AsitePar]:HAS[@WWPJ_Settings:HAS[#Homeworld[AsitePar]]]:AFTER[zWeekWorldPlanetJam]
+!Scatterer_ocean[AsitePar]:HAS[@WWPJ_Settings:HAS[#Homeworld[AsitePar]]]:AFTER[zWeekWorldPlanetJam]
 {
-	@Ocean[AsitePar]
-	{
-		@name = Kerbin
-	}
+	//@Ocean[AsitePar]
+	//{
+	//	@name = Kerbin
+	//}
 }
 @Scatterer_atmosphere[AsitePar]:HAS[@WWPJ_Settings:HAS[#Homeworld[AsitePar]]]:AFTER[zWeekWorldPlanetJam]
 {
